# email_deliver

./: Cargo.toml  Dockerfile  README.md
.cargo/: config.toml
.github/workflows/: general.yml
.sqlx/: query-7fc823938e7c509d94c5ea043c0a7f4290ada7a4dc130da7dfcb465e825d5cd4.json
configuration/: base.yaml
scripts/: aws-ec2-script  init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs  subscriptions.rs
tests/helpers/: mod.rs
