[package]
name = "email_deliver"
version = "0.1.0"
edition = "2021"
authors = ["Yorí <yorigcsdev@gmail.com.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "email_deliver"

[dependencies]
axum = "0.7.4"
http-body-util = "0.1.0"
tokio = { version = "1.36.0", features = ["full"]}
serde_json = "1.0.113"
serde-aux = "4.4.0"
mime = "0.3.17"
serde = { version = "1.0.196", features = ["derive"] }
config = "0.14.0"
uuid = { version = "1.7.0", features = ["v4"] }
chrono = "0.4.34"
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["env-filter", "json"] }
tower-http = { version = "0.5.1", features = ["trace"] }

[dependencies.sqlx]
version = "0.7.3"
default-features = false
features = ["runtime-tokio-rustls", "postgres","time", "uuid","chrono","migrate", "macros", "sqlx-macros"]


[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
once_cell = "1.19.0"